added reply functionality

--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -1,5 +1,5 @@
 <div id="fs_modal_header">
-  <h3>Account Preferences
+  <h3>Settings
     <i class="fa fa-times link" [routerLink]="['/']"></i>
   </h3>
 </div>
