--- a/src/app/account-widget/account-widget.component.css
+++ b/src/app/account-widget/account-widget.component.css
@@ -1,12 +1,40 @@
-h6:hover, .user-name:hover {
-  cursor: pointer;
-}
-
-.preferences {
-  position: absolute;
-  z-index: 50000;
-}
-
 .account-text {
-  color:#fff;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.account-text:hover {
+  cursor: pointer;
+  color: rgb(214, 235, 255);
+}
+
+.link {
+  margin-bottom:0px;
+  padding: 15px 15px 15px 15px;
+  color: #fff;
+  cursor: pointer;
+  border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.link:hover {
+  background: #1f649c;
+  border-radius: 3px;
+}
+
+.menu {
+  padding: 0px;
+  border: 0px;
+  background: #0b3e69;
+  z-index: 100;
+}
+
+.card-body {
+  padding: 0px;
+}
+
+.menu-toggle {
+  margin-top: 15px;
+  margin-right: 20px;
+  text-align: right;
 }
