--- a/src/app/account-widget/account-widget.component.html
+++ b/src/app/account-widget/account-widget.component.html
@@ -1,11 +1,10 @@
-<p></p>
-
-  <span class="account-text" placement="bottom">Welcome, {{companyName}}! <i (click)="showMenu=!showMenu" class=" user-name fa fa-cog" aria-hidden="true"></i></span>
-
-  <div *ngIf="showMenu" class="preferences card">
-    <div class="card-body">
-      <h6 (click)="signout()">Signout</h6>
-      <h6 (click)="goToAccountSettings()">Account Settings</h6>
-      <h6 (click)="goToAbout()">About</h6>
-    </div>
+<div class="menu-toggle">
+  <span (click)="showMenu=!showMenu" class="account-text" placement="bottom"> {{companyName}} <i class="user-name fa fa-cog"
+      aria-hidden="true"></i></span>
+</div>
+<div *ngIf="showMenu" class="menu card">
+  <div class="card-body">
+    <p (click)="goToAccountSettings()" class="link">Settings</p>
+    <p (click)="signout()" class="link">Signout</p>
   </div>
+</div>
