--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -3,25 +3,44 @@
   overflow: hidden;
 }
 
-.card-day {
+.card-day-of-week {
   height: 20px;
   width: 14%;
   border: none;
   overflow: scroll;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  background-color: #f9fbfc;
+  margin-bottom: 10px;
+  margin-top: 0px;
   text-align: center;
+  font-weight: bold;
+  font-size:0.8em;
+  color:rgb(84, 84, 85)
 }
 
 .card-month {
   height: 180px;
   width: 14%;
   overflow: scroll;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border:0px 0px 0px 0px;
 }
 
-/* expanding input CSS only */
+.card-body {
+  border:0px;
+}
+
+.card {
+ border-radius: 0px;
+}
+
+.month-container {
+  padding-top:40px;
+  padding-left:25px;
+  border-radius: 10px;
+  margin-top:20px;
+  height: 100%;
+  background-color: white;
+  margin-bottom:20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 #searchInput {
   width: 230px;
@@ -49,17 +68,23 @@
   color: grey;
 }
 
-.fa-times:hover {
-  cursor: pointer;
+.carousel{
+  margin-top:10px; 
 }
 
 .month-carousel {
-  font-size: 2em;
+  font-size: 1.8em;
+  color: #fff;
+  font-weight: bold;
+}
+
+.year-carousel {
+  font-size: 1.8em;
   color: #fff;
 }
 
 .month-arrow {
-  font-size: 2em;
+  font-size: 1.8em;
   opacity: 0.5;
   margin: 0 10px 0 10px;
   color: #fff;
@@ -75,7 +100,6 @@
 }
 
 .calendar {
-  padding-left: 2.5%;
   background-color: #f9fbfc;
   margin-bottom: 20px;
 }
@@ -97,14 +121,19 @@
   color: white;
 }
 
+.card-link-cancelled {
+  background: #d83838;
+}
+
 .card-link-selected {
   padding: 5px;
   margin-bottom: 2px;
   border-radius: 10px;
-  background: #d83838;
+  background: #078059;
   font-size: 0.8em;
   color: white;
 }
+
 
 .card-link:hover, .link:hover {
   cursor: pointer;
@@ -115,21 +144,22 @@
 }
 
 .day-title {
-  margin-top: -20px;
-  margin-left: -15px;
+  color:rgb(99, 98, 98);
+  font-size: 0.7em;
+  margin-top: -18px;
+  margin-left: -17px;
 }
 
 .results-header {
-  font-size: 1.0em;
+  font-size: 1.5em;
   text-align: left;
   padding: 12px;
-  background-color:  rgb(243, 240, 240);
   border-bottom: 1px solid rgb(212, 211, 211);
 }
 
 .search-results {
+  border-radius: 10px;
   padding: 0;
-  overflow: scroll;
   min-height: 100%;
   display: block;
   background-color: white;
@@ -149,11 +179,11 @@
 }
 
 .fa-arrow-circle-right {
-  color: rgb(87, 87, 87);
+  color:#0b3e69;
 }
 
 .fa-arrow-circle-right:hover {
-  color: rgb(37, 37, 37);
+  color:#093152;
 }
 
 .search-result-title {
@@ -171,19 +201,14 @@
 
 .is-today-card {
   border-radius: 50%;
-  width: 24px;
-  height: 24x;
+  width: 16px;
+  height: 16x;
   color: white;
   text-align: center;
   background: #d83838;
 }
 
-.generic-card {
-  background-color: #fff;
-}
-
 /* Grow */
-
 .hvr-grow {
   vertical-align: middle;
   transform: translateZ(0);
@@ -269,8 +294,8 @@
 }
 
 .slide-out-right {
-	-webkit-animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-	        animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  -webkit-animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 @-webkit-keyframes slide-left {
@@ -294,27 +319,29 @@
     transform: translateX(-100px)
   }
 }
+
 @-webkit-keyframes slide-out-right {
   0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
     opacity: 1;
   }
   100% {
     -webkit-transform: translateX(1000px);
-            transform: translateX(1000px);
+    transform: translateX(1000px);
     opacity: 0;
   }
 }
+
 @keyframes slide-out-right {
   0% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
     opacity: 1;
   }
   100% {
     -webkit-transform: translateX(1000px);
-            transform: translateX(1000px);
+    transform: translateX(1000px);
     opacity: 0;
   }
 }
