--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -20,15 +20,9 @@
   height: 180px;
   width: 14%;
   overflow: scroll;
-  border:0px 0px 0px 0px;
-}
-
-.card-body {
-  border:0px;
-}
-
-.card {
- border-radius: 0px;
+  border-width:1px;
+  border-radius: 0px;
+  border-color:rgb(194, 192, 192);
 }
 
 .month-container {
@@ -145,7 +139,7 @@
 
 .day-title {
   color:rgb(99, 98, 98);
-  font-size: 0.7em;
+  font-size: 0.8em;
   margin-top: -18px;
   margin-left: -17px;
 }
@@ -157,14 +151,17 @@
   border-bottom: 1px solid rgb(212, 211, 211);
 }
 
+.results-title {
+  color:#0b3e69;
+  font-weight: bold;
+}
+
 .search-results {
+  margin-top:20px;
   border-radius: 10px;
   padding: 0;
-  min-height: 100%;
-  display: block;
   background-color: white;
   z-index: 11;
-  width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -179,6 +176,7 @@
 }
 
 .fa-arrow-circle-right {
+  margin-top:5px;
   color:#0b3e69;
 }
 
@@ -201,8 +199,8 @@
 
 .is-today-card {
   border-radius: 50%;
-  width: 16px;
-  height: 16x;
+  width: 20px;
+  height: 20x;
   color: white;
   text-align: center;
   background: #d83838;
