--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -66,8 +66,9 @@
 
     <!-- Results Pane-->
     <div *ngIf="showResults" [ngClass]="{'slide-left':slideLeft==true, 'slide-out-right':slideRight==true}" class="col-md-3 search-results">
-      <div class="results-header">
-        <i class="fa fa-arrow-circle-right hvr-grow link" (click)="hideResults()"></i>
+      <div class="results-header text-center">
+        <i class="fa fa-arrow-circle-right hvr-grow link float-left" (click)="hideResults()"></i>
+         <span class="results-title">Search Results</span>
       </div>
 
       <div *ngIf="searchResults.length < 1" class="no-results">
