--- a/src/app/account-widget/account-widget.component.css
+++ b/src/app/account-widget/account-widget.component.css
@@ -10,7 +10,7 @@
 }
 
 .link {
-  margin-bottom:0px;
+  margin-bottom: 0px;
   padding: 15px 15px 15px 15px;
   color: #fff;
   cursor: pointer;
@@ -37,4 +37,41 @@
   margin-top: 15px;
   margin-right: 20px;
   text-align: right;
+}
+
+.slide-in-top {
+  -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+/**
+ * ----------------------------------------
+ * animation slide-in-top
+ * ----------------------------------------
+ */
+
+@-webkit-keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
