--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -30,20 +30,17 @@
   <div class="row">
     <div class="calendar" [ngClass]=" showResults ? 'col-md-9': 'col-md-12'">
 
-      <!-- TODO fix the conditional styling - this fucks up when year changes -->
       <div class="month-container">
         <div *ngFor="let day of daysTxt; let i of index;" class="card card-day-of-week" [ngClass]="{'float-left': i%7!=0}">
           {{day}}
         </div>
         <br>
         <!-- days from previous month -->
-        <div *ngFor="let day of dayOfWeekFirstOfMonth" class="card card-month float-left prev-day">
-          <div class="card-body">
-          </div>
+        <div *ngFor="let day of dayOfWeekFirstOfMonth" class="card card-month prev-month-days">
         </div>
+        <!-- list all appts for day-->
         <div *ngFor="let day of Object.keys(appointments[year][month]); let i of index;" class="card card-month"
-          [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0}">
-
+          [ngClass]="{'inside-week': i+1 %7!=0, 'end-week': (i*1 + dayOfWeekFirstOfMonth.length) % 7 === 0, 'first-se7en': (i-1 + dayOfWeekFirstOfMonth.length) < 7}">
           <div class="card-body" (dblclick)="openModal(template, month, day)">
             <p class="day-title" [ngClass]="{'is-today-card':(dayOfMonth == day) && (currentMonth == month)}">{{day}}</p>
             <div *ngFor="let appt of appointments[year][month][day]; index as i;">
@@ -59,6 +56,9 @@
             </div>
           </div>
         </div>
+        <!-- days from next month -->
+        <div *ngFor="let day of daysFromNextMonth; index as i;" class="card card-month next-month-days" [ngClass]="{'end-week':i === daysFromNextMonth.length-1}" >
+        </div>
       </div>
 
 
@@ -68,7 +68,7 @@
     <div *ngIf="showResults" [ngClass]="{'slide-left':slideLeft==true, 'slide-out-right':slideRight==true}" class="col-md-3 search-results">
       <div class="results-header text-center">
         <i class="fa fa-arrow-circle-right hvr-grow link float-left" (click)="hideResults()"></i>
-         <span class="results-title">Search Results</span>
+        <span class="results-title">Search Results</span>
       </div>
 
       <div *ngIf="searchResults.length < 1" class="no-results">
