--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" (swipe)="deleteSelected()">
   <div class="row">
     <div class="col-md-12 header">
       <div class="row">
