--- a/src/app/account-settings/account-settings.component.css
+++ b/src/app/account-settings/account-settings.component.css
@@ -1,6 +1,6 @@
 .card {
-  margin-top: 150px;
-  padding: 60px;
+  margin-top: 100px;
+  padding: 40px;
 }
 
 #fs_modal_header {
@@ -35,24 +35,95 @@
   opacity: 1;
 }
 
-.ng-valid[required], .ng-valid.required {
-  border-left: 5px solid #42A948;
-  /* green */
-}
 
-.ng-invalid:not(form) {
-  border-left: 5px solid #a94442;
-  /* red */
-}
-
-h1 {
-  margin-bottom: 30px;
-}
-
-.account-info {
-  margin-bottom: 20px;
-}
 
 h3 {
   color: #fff;
+}
+
+.btn-success {
+  font-size: 17px;
+  line-height: 1.47059;
+  font-weight: 400;
+  letter-spacing: -.022em;
+  font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #0070c9;
+  background: linear-gradient(#42a1ec, #0070c9);
+  border-color: #07c;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  min-width: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.btn-delete {
+  font-size: 17px;
+  line-height: 1.47059;
+  font-weight: 400;
+  letter-spacing: -.022em;
+  font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #c90000;
+  background: linear-gradient(#ec4242ea, #c90000);
+  border-color: rgb(204, 0, 0);
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  color: white;
+  display: inline-block;
+  min-width: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.btn:hover {
+  opacity: .80;
+}
+
+.title {
+  margin: 10px 0px 20px 0px;
+}
+
+/**
+ * The CSS shown here will not be introduced in the Quickstart guide, but shows
+ * how you can use CSS to style your Element's container.
+ */
+ .StripeElement {
+  box-sizing: border-box;
+
+  height: 40px;
+
+  padding: 10px 12px;
+
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: white;
+
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
 }
